# RAG-juridique-arab

./: DEPLOYMENT.md
chatBotJuridiques-RAG-PFA/: .geminiignore  API_Testing_Guide.txt  DEPLOYMENT copy.md  DEPLOYMENT.md  GEMINI.md  RUN_FRONTEND.bat  (+8 more)
chatBotJuridiques-RAG-PFA/backend/: .env.example  Dockerfile  chroma_db_dump.txt  ingest_corpus.py  main.py  pyproject.toml  query_chroma.py  requirements.txt  setup_db_extension.py  test.py  test_compile_service.py  test_endpoints.py  test_latexlite.py  test_latexlite_list.py  test_latexlite_multipart.py  test_latexlite_multipart2.py  test_latexlite_multipart3.py  test_latexlite_syntax.py  test_latexlite_zip.py  test_message.py  view_chroma_db.py
chatBotJuridiques-RAG-PFA/backend/app/: ai.py  config.py  database.py  dependencies.py  logger.py  main.py  models.py  schemas.py  templates_registry.json
chatBotJuridiques-RAG-PFA/backend/app/core/embedding/: embedder.py
chatBotJuridiques-RAG-PFA/backend/app/core/generation/: llm.py
chatBotJuridiques-RAG-PFA/backend/app/core/ingestion/: arabic_normalizer.py  chunker.py  extractor.py  gpt4o_extractor.py  pymupdf_text_extractor.py
chatBotJuridiques-RAG-PFA/backend/app/core/retrieval/: reranker.py  vector_store.py
chatBotJuridiques-RAG-PFA/backend/app/routers/: auth.py  chats.py  editor.py  files.py  lawyers.py
chatBotJuridiques-RAG-PFA/backend/app/services/: chat_service.py  editor_service.py  file_service.py  lawyer_service.py  user_service.py
chatBotJuridiques-RAG-PFA/backend/chroma_db/: chroma.sqlite3
chatBotJuridiques-RAG-PFA/backend/ocr_cache/: ocr_results.json
(+149 files in other folders)
