[project]
name = "backend"
version = "0.1.0"
description = "ChatBot Juridique - RAG Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.4.0",
    "httpx>=0.28.1",
    "google-genai>=1.14.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.2.2",
]
